# hobson

./: .gitignore  CLAUDE.md  README.md
docs/: Anchor_Based_Window_Positioning.md  Bootstrap_Architecture.md  CSS_Cleanup_Implementation.md  CSS_Cleanup_Plan.md  Child View Schema.md  Code Review.md  Code_Items.md  Code_Snapshot_Safety_System.md  Content_Field_Conventions.md  Declarative Event Watches.md  Description_Property_Implementation_Guide.md  Design_Decisions_Log.md  Documentation_Transformation_Plan.md  Event System Assessment.md  Event_Definitions_Design.md  Future_Directions.md  Import_Examples.md  Import_Guide.md  Kernel extraction candidates.md  Kernel_Minimization_Plan.md  Kernel_Minimization_Review.md  Naming_Convention_Migration.md  Nested_Instances_Implementation.md  Phase 1 - Event System.md  (+37 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/tauri-plugin-notification/: api-iife.js
src-tauri/plugins/tauri-plugin-notification/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-notification/android/src/main/java/: NotificationPlugin.kt  TauriNotificationManager.kt
src-tauri/plugins/tauri-plugin-notification/permissions/: default.toml
src-tauri/plugins/tauri-plugin-notification/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-notification/permissions/autogenerated/commands/: can_schedule_exact_alarms.toml  request_schedule_exact_alarm.toml
src-tauri/plugins/tauri-plugin-notification/permissions/schemas/: schema.json
src-tauri/src/: lib.rs  main.rs
(+1459 files in other folders)
