[package]
name = "hobson"
version = "0.1.0"
description = "Hobson live programming environment"
authors = []
edition = "2021"
publish = false

[lib]
name = "hobson_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = { path = "plugins/tauri-plugin-notification" }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
